# video-compression-optimizer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  README_JP.md  pyproject.toml
docs/: api-specification.md  architecture.md  data-models.md
sam-app/: .cfnlintrc  template.yaml
sam-app/async-task-cancel/: app.py
sam-app/async-task-status/: app.py
sam-app/async-task-submit/: app.py
sam-app/async-workflow/: app.py  quality_config.py
sam-app/quality-checker/: Dockerfile  app.py  requirements.txt
sam-app/scripts/: create-ffmpeg-layer.sh
sam-app/statemachine/: async-workflow.asl.json
scripts/: run_compatibility_test.py
src/vco/: __init__.py
swift/: Package.swift  build_swift.sh  create_app_bundle.sh
swift/.build/: build.db  debug.yaml
tests/: __init__.py  conftest.py
tests/contract/: test_api_contracts.py  test_data_model_contracts.py
tests/e2e/: __init__.py  test_real_conversion.py
tests/integration/: __init__.py  test_async_imports.py  test_async_workflow.py  test_cli_smoke.py  test_import_cli.py  test_scan_convert_workflow.py  test_swift_python_compatibility.py
tests/properties/: __init__.py  test_async_task_roundtrip.py  test_batch_error_resilience.py  test_best_effort_selection.py  test_cancel_cleanup_completeness.py  test_codec_classification.py  test_completed_invariant.py  test_compression_ratio.py  test_date_filter.py  test_edge_cases.py  test_field_roundtrip.py  test_file_naming.py  test_i18n.py  test_local_server_sync.py  test_mediaconvert_error_classification.py  test_metadata_embedding.py  test_metadata_roundtrip.py  test_original_file_safety.py  test_progress_consistency.py  test_quality_gate.py  test_quality_preset.py  test_review_queue.py  test_s3_key_format.py  test_settings_consistency.py  test_ssim_retry_behavior.py  test_status_display_completeness.py  test_task_status_aggregation.py  test_top_n.py  test_unified_import_properties.py
tests/unit/: __init__.py  test_alternate_path_verification.py  test_api_boundary.py  test_async_convert_command.py  test_async_convert_progress.py  test_async_task_methods.py  test_cancel_command.py  test_cli.py  test_cli_legacy.py  (+32 more)
(+608 files in other folders)
